--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@react-query-firebase/firestore": "^0.4.2",
     "eas-cli": "^0.46.0",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
     "expo-google-app-auth": "~8.3.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-pager-view": "5.4.6",
     "react-native-paper": "^4.7.2",
@@ -39,8 +41,7 @@
     "react-native-screens": "~3.8.0",
     "react-native-tab-view": "^3.0.0",
     "react-native-web": "0.17.1",
-    "react-query": "^3.34.12",
-    "expo-app-loading": "~1.3.0"
+    "react-query": "^3.34.12"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
