--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-screens": "~3.8.0",
     "react-native-tab-view": "^3.0.0",
     "react-native-web": "0.17.1",
-    "react-query": "^3.34.12"
+    "react-query": "^3.34.12",
+    "expo-google-sign-in": "~10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
