--- a/app.json
+++ b/app.json
@@ -17,14 +17,20 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.instaclone.app",
+      "config": {
+        "googleSignIn": {
+          "reservedClientId": "com.googleusercontent.apps.355903971926-l8rfvfdcbcoj2mn8d19tnm28g3r5sprq"
+        }
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.medafcase.myproject"
+      "package": "com.instaclone.app"
     },
     "web": {
       "favicon": "./assets/favicon.png"
