--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-native-tab-view": "^3.0.0",
     "react-native-web": "0.17.1",
     "react-query": "^3.34.12",
-    "expo-google-sign-in": "~10.1.0"
+    "expo-google-sign-in": "~10.1.0",
+    "expo-web-browser": "~10.1.0",
+    "expo-random": "~12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
