--- a/eas.json
+++ b/eas.json
@@ -1,26 +1,18 @@
 {
-    "cli": {
-      "version": ">= 0.46.0"
+  "cli": {
+    "version": ">= 0.47.0"
+  },
+  "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal"
     },
-    
-      "build": {
-        "preview": {
-          "android": {
-            "buildType": "apk"
-          }
-        },
-        "preview2": {
-          "android": {
-            "gradleCommand": ":app:assembleRelease"
-          }
-        },
-        "preview3": {
-          "developmentClient": true
-        },
-        "production": {}
-      }
-    }
-  
-
-    
-  
+    "preview": {
+      "distribution": "internal"
+    },
+    "production": {}
+  },
+  "submit": {
+    "production": {}
+  }
+}
